<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XBMC Widget</string>
    <string name="error_content_title">XBMC widget is on the fritz</string>
    <string name="error_content_text">Click for troubleshooting</string>
    <string name="error_ticker_text">Darn - the clicker\'s on the fritz</string>
    <string name="lbl_host">Host</string>
    <string name="lbl_port">Port</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_use_auth">Authentication</string>
    <string name="lbl_about">About</string>
	<string name="lbl_recenttv">Recent TV</string>
	<string name="lbl_recent_tv_movies">Recent TV/Movies</string>
	<string name="lbl_recentmovies">Recent Movies</string>
	<string name="lbl_refresh_interval">Refresh every</string>
	<string name="lbl_refresh_interval_summary">How often to check XBMC for new content</string>
    <string name="lbl_hosts">XBMC host</string>
    <string name="lbl_host_summary">XBMC host including port (e.g. 192.168.1.100:888)</string>
    <string name="lbl_use_auth_summary">Use authentication</string>
    <string name="lbl_just_now">just now</string>
    <string name="lbl_minutes_ago">%1$d minutes ago</string>
    <string name="lbl_hours_ago">%1$d hours ago</string>
    <string name="lbl_hour_ago">%1$d hour ago</string> 
    <string name="lbl_yesterday">yesterday</string>
    <string name="lbl_today">today</string>
    <string name="lbl_days_ago">%1$d days ago</string>
    <string name="lbl_ages_ago">ages ago</string>
    <string name="lbl_w_ago">%1$dw ago</string>
    <string name="lbl_d_ago">%1$dd ago</string>
    <string name="lbl_http_prefix">http://</string>
    <string name="lbl_new">new</string>
    <string name="lbl_next">next</string>
    <string name="lbl_previous">previous</string>
    <string name="message_about"><![CDATA[
    	<p>
    		This application was created by Anders Persson,  
    		my site is at <a href="http://anderspersson.com">anderspersson.com</a>.
    	</p> 
    
    	<p>
    		Thanks to P.J Onari for making his icons available to the public - 
    		<a href="http://somerandomdude.com/work/iconic/">somerandomdude.com</a>
    	</p>
    	
    	<p>
    		This software also uses:<br />
    		CommonsWare Android Components: WakefulIntentService<br />
    		Copyright (c) 2009-11 CommonsWare, LLC<br />
    		Licensed under the Apache Software License 2.0<br />
    		<a href="http://www.apache.org/licenses/">http://www.apache.org/licenses/</a>
    	</p>
    ]]>
    </string>
    <string name="lbl_troubleshoot">Troubleshooting</string>
    <string name="message_troubleshooting"><![CDATA[
  		<p>1. Have you enabled XBMCs web API?</p>
  		<p>2. Is the XBMC computer sleeping? Is XBMC running?</p>
  		<p>3. Did you provide the correct settings? Did you specify port for example?</p>
  		<p>4. Can you connect using other apps like the official XBMC remote?</p>
  		<p>5. No images? Did you add videos to the library like in 
  		<a href="http://wiki.xbmc.org/index.php?title=Adding_videos_to_the_library/Setting_content_and_scanning">this guide</a>?</p>
    ]]>
    </string>
    <string name="message_update_failed">Major bummer! Couldn\'t get any shows or there are none. Check config and try again.</string>
    	
</resources>
