<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
                    
   		 
    <EditTextPreference
    	android:key="hostname_preference"
		android:title="@string/lbl_host"
		android:text="http://"
        android:summary="@string/lbl_host_summary" />
        
     <CheckBoxPreference
     	android:key="use_auth_preference"
        android:title="@string/lbl_use_auth"
        android:summary="@string/lbl_use_auth_summary" />
    
    <PreferenceCategory android:title="Authentication">            
         <EditTextPreference
         	android:key="username_preference"
         	android:title="@string/lbl_username" 
         	android:dependency="use_auth_preference" />
         	
         <EditTextPreference 
         	android:key="password_preference"
         	android:title="@string/lbl_password" 
         	android:dependency="use_auth_preference" 
         	android:inputType="textPassword" />
                
  </PreferenceCategory>            
            
</PreferenceScreen>
