<?xml version="1.0" encoding="utf-8"?>
<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="com.anderspersson.xbmcwidget.configuration.HostsPreferenceFragment"
            android:title="@string/lbl_hosts" >
    </header>

        <header android:fragment="com.anderspersson.xbmcwidget.configuration.RecentVideoPreferenceFragment"
            android:title="@string/lbl_recent_tv_movies" >
    </header>
    
    <header
		android:fragment="com.anderspersson.xbmcwidget.configuration.TroubleshootingPreferenceFragment"   
        android:title="@string/lbl_troubleshoot">
    </header>

    <header android:fragment="com.anderspersson.xbmcwidget.configuration.AboutPreferenceFragment"   
            android:title="@string/lbl_about">
    </header>

</preference-headers>
