<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/widget_margin">
    
<RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/recent_tv_item"
    android:background="#33000000"
    android:padding="2dp">
	
	<ImageView 
        android:id="@+id/fanArt"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="#A9A9A9" 
		android:scaleType="centerCrop"
		android:padding="1dp"
		android:src="@drawable/default_tv_fan_art"
		android:adjustViewBounds="true" 
		android:contentDescription="@string/lbl_recent_tv_movies" />
	
	<TextView 
        android:id="@+id/default_header"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center" 
		android:textSize="20sp"
		android:maxLines="2"
		android:ellipsize="end"
		android:layout_alignLeft="@id/fanArt"
		android:layout_alignRight="@id/fanArt"
		android:layout_alignBottom="@id/fanArt"
		android:layout_alignTop="@id/fanArt"
		android:paddingBottom="45sp" />
	
	<ImageView 
        android:id="@+id/new_icon"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="1dp"
		android:visibility="invisible"
		android:src="@drawable/new_label" 
		android:contentDescription="@string/lbl_new" />
    
    <LinearLayout
       	android:id="@+id/textSection"
        android:layout_width="wrap_content"
		android:layout_height="45sp"
		android:layout_alignBottom="@id/fanArt"
		android:layout_alignLeft="@id/fanArt"
		android:layout_alignRight="@id/fanArt"
		android:background="#AA000000"
		android:layout_marginLeft="1dp"
		android:layout_marginRight="1dp"
		android:layout_marginBottom="1dp"
		android:clickable="false">
        
		<ImageButton
	    	android:id="@+id/prev_show"
			android:src="@drawable/nav_btn_src_selector_left"
			android:layout_width="wrap_content"
          	android:layout_height="fill_parent"
			android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
          	style="@style/RecentTvButton"  
          	android:contentDescription="@string/lbl_previous"/>
        
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1"
			android:paddingRight="6dp"
			android:paddingTop="4dp"
			android:paddingBottom="4dp">
            
            <TextView 
		    	android:id="@+id/item_header"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical"
		    	android:textColor="#ffffff"
		    	android:textStyle="bold"
		    	android:textSize="14sp"
		    	android:ellipsize="end"
		    	android:singleLine="true"
		    	android:lines="1" />
              
	        <TextView 
		    	android:id="@+id/item_subheader"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical"
		    	android:textColor="#ffcccccc"
		    	android:textStyle="bold"
		    	android:textSize="12sp"
		    	android:ellipsize="end"
		    	android:singleLine="true" 
		    	android:lines="1" />  
        </LinearLayout>
        
        <TextView 
	    	android:id="@+id/age"
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:textColor="#ffffff"
	    	android:textStyle="bold"
	    	android:gravity="right|center_vertical"
	    	android:layout_marginLeft="4dp"
	    	android:textSize="12sp" />  
	    	
        <ImageButton
            android:id="@+id/next_show"
			android:src="@drawable/nav_btn_src_selector_right"
			android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            style="@style/RecentTvButton"  
            android:contentDescription="@string/lbl_next"/>
        
    </LinearLayout>   
    
    <Button
        android:id="@+id/play_recenttv_button"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
        android:background="#0000FFFF" 
        android:layout_above="@id/textSection"
        android:layout_alignTop="@id/fanArt"
        android:layout_alignLeft="@id/fanArt"
        android:layout_alignRight="@id/fanArt"
        android:layout_marginLeft="1dp"
		android:layout_marginRight="1dp"
		android:layout_marginTop="1dp" />

</RelativeLayout>
</FrameLayout>
